# grilo-plugins

./: Makefile.am  configure.ac
src/: Makefile.am
src/filesystem/: Makefile.am
src/gstreamer/: Makefile.am  discovery-info-resource.c  grl-gstreamer.c  grl-gstreamer.h  grl-gstreamer.xml
src/opensubtitles/: grl-opensubtitles.c
tests/: .gitignore  Makefile.am
tests/gstreamer/: Makefile.am  test_gstreamer.c
